<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/timerFragment">

    <fragment
        android:id="@+id/timerFragment"
        android:name="com.porashona.studymaster.ui.timer.TimerFragment"
        android:label="@string/nav_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.porashona.studymaster.ui.stats.StatsFragment"
        android:label="@string/nav_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/routineFragment"
        android:name="com.porashona.studymaster.ui.routine.RoutineFragment"
        android:label="@string/nav_routine"
        tools:layout="@layout/fragment_routine" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.porashona.studymaster.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>